<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kyste"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/kyste" />
        <item
            android:id="@+id/nav_macrocalcification"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/macrocalcification" />
        <item
            android:id="@+id/nav_nodule_hyper"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/nodule_hyper" />
        <item
            android:id="@+id/nav_nodule_iso"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/nodule_iso" />

        <item
            android:id="@+id/nav_nodule_hypo"
            android:icon="@drawable/ic_label_outline_black_24dp"
            android:title="@string/nodule_hypo" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_person_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
